<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">麦芽生活</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="home">首页</string>
    <string name="feilei">分类</string>
    <string name="person_center">个人中心</string>
    <string name="person_center_empty_txt">您还未登录</string>
    <string name="person_center_setting">设置</string>
    <string name="person_center_msg">消息中心</string>
    <string name="shop_car">购物车</string>
    <string name="shop_car_emtpy_txt">您的购物车内还没有任何商品</string>
    <string name="login">登录</string>
    <string name="sure">确定</string>
    <string name="login_please">请登录</string>
    <string name="login_other_place">用户已在其他地方登陆</string>
    <string name="member_login">会员登录</string>
    <string name="register">注册</string>
    <string name="update_version">版本更新</string>
    <string name="about_us">关于我们</string>
    <string name="xieyi">服务协议</string>
    <string name="lianxikefu">联系客服</string>
    <string name="exit">退出当前登录</string>
    <string name="member_register">会员注册</string>
    <string name="yonghuming">用户名</string>
    <string name="yonghuming_hint">请输入手机号</string>
    <string name="mima">密码</string>
    <string name="chongzhimima">重置密码</string>
    <string name="mima_hint">请输入密码</string>
    <string name="mima_again_hint">请再次输入密码</string>
    <string name="yanzhegnma">验证码</string>
    <string name="yanzhegnma_get">获取验证码</string>
    <string name="yanzhegnma_hint">请输入验证码</string>
    <string name="next_step">下一步</string>
    <string name="auto_login">自动登录</string>
    <string name="forget_pwd">忘记密码 ?</string>
    <string name="forget_password">找回密码</string>
    <string name="serch_hint">搜索你想找的商品</string>
    <string name="serch_emptyehint">抱歉,没找到相关商品</string>
    <string name="serch">搜索</string>
    <string name="dingdan">订单查询</string>
    <string name="my_shoucang">我的收藏</string>
    <string name="call_soom">电话速购</string>
    <string name="my_order">我的订单</string>
    <string name="my_order_see_all">查看所有订单</string>
    <string name="my_order_daifukuan">待付款</string>
    <string name="my_order_daishouhuo">待收货</string>
    <string name="my_order_daipingjia">待评价</string>
    <string name="my_order_over">已完成</string>
    <string name="my_order_tuikuan">退款中</string>
    <string name="wansgrzi">完善个人资料</string>
    <string name="scgl">收藏管理</string>
    <string name="xiaoxizhognxin">消息中心</string>
    <string name="wodegwc">我的购物车</string>
    <string name="mimaxiugai">修改密码</string>
    <string name="dizhiguanli">地址管理</string>
    <string name="save">保存</string>
    <string name="add_address">+添加收货地址</string>
    <string name="input_hint">请输入</string>
    <string name="price">价格</string>
    <string name="xiaoliang">销量</string>
    <string name="add_to_shopcar">加入购物车</string>
    <string name="good_comments">商品评价</string>
    <string name="addto_shopcar_sucess">成功加入购物车</string>
    <string name="order_detail">订单详情</string>
    <string name="pingjia">评价</string>
    <string name="jiesuan">结算</string>
    <string name="goods_empty">无货</string>
    <string name="goods_not_empty">有货</string>
    <string name="send">发送</string>
    <string name="mobile_empty">请输入手机号码！</string>
    <string name="mobile_length_wrong">手机号码长度不正确</string>
    <string name="cannot_connet_network">请检查您的网络设置</string>
    <string name="loading">努力加载中...</string>
    <string name="loading_getversion">正在获取新版信息...</string>
    <string name="loading_submit_comments">正在提交评价信息...</string>
    <string name="loading_cancle_order">正在取消订单...</string>
    <string name="loading_submit_order">正在提交订单...</string>
    <string name="loading_send_msg">正在发送消息...</string>
    <string name="loading_del_shopcart">正在删除商品...</string>
    <string name="loading_save_add">正在保存地址信息...</string>
    <string name="loading_login">正在登陆中...</string>
    <string name="loading_register">正在注册...</string>
    <string name="loading_getcode">正在获取验证码...</string>
    <string name="loading_checkcode">正在提交验证...</string>
    <string name="loading_upload_head">正在提交信息...</string>
    <string name="loading_get_address">正在获取地址信息...</string>
    <string name="loading_cancle_address">正在取消地址...</string>
    <string name="http_respone_error">网络或服务器异常</string>
    <string name="weijihuo">未激活</string>
    <string name="register_done">该手机号已注册</string>
    <string name="register_wuxiao">该手机号无效</string>
    <string name="register_mobile_del">该手机号已删除</string>
    <string name="register_now">立即注册</string>
    <string name="agree">同意</string>
    <string name="service_xiyi">服务协议</string>
    <string name="pwd_sure">确认密码</string>
    <string name="pwd_not_same">两次密码输入不一致</string>
    <string name="code_again">请重新获取验证码</string>
    <string name="code_wrong">验证码错误</string>
    <string name="pwd_modify_sucess">密码修改成功</string>
    <string name="edit_head">编辑头像</string>
    <string name="img_from_album">相册</string>
    <string name="img_from_camera">拍照</string>
    <string name="save_head_fail">无法保存上传的头像，请检查SD卡是否挂载</string>
    <string name="save_head_sucess">头像修改成功</string>
    <string name="save_person_info_sucess">修改成功</string>
    <string name="select_date">选择日期</string>
    <string name="select_date_wrong">请选择正确的日期</string>
    <string name="collect_good_sucess">已添加到我的收藏</string>
    <string name="cancle_good_sucess">已取消收藏</string>
    <string name="cancle">取消</string>
    <string name="goods_atlest_num">最少选择一件商品</string>
    <string name="godds_empty">本品缺货，我们会尽快补充</string>
    <string name="add_set_default">设为默认</string>
    <string name="add_default">默认地址</string>
    <string name="name_empty">请填写收货人</string>
    <string name="street_empty">请填写小区或街道名字</string>
    <string name="add_empty">请填写详细收货地址</string>
    <string name="select_category">选择分类</string>
    <string name="send_msg_empty">发送内容不能为空</string>
    <string name="area_not_support">对不起，输入错误或不在派送范围内。请正确输入，例如：摩卡筑</string>
    <string name="delivery_type_1">定时派送</string>
    <string name="delivery_type_2">即时派送</string>
    <string name="delivery_type_3">上门自提</string>
    <string name="delivery_type">派送方式</string>
    <string name="add_address_tip">请添加收货地址</string>
    <string name="add_goods_tip">请添加商品</string>
    <string name="code_has_send">验证码已发送</string>
    <string name="pwd_length_tip">密码长度至少为6位</string>
    <string name="order_empty">暂无订单</string>
    <string name="no_pay">待付款</string>
    <string name="no_get">待收货</string>
    <string name="no_comments">待评论</string>
    <string name="is_over">已完成</string>
    <string name="apply_ing">退款中</string>
    <string name="pay_now">立即支付</string>
    <string name="deliverying">派送中...</string>
    <string name="sure_get">确认收货</string>
    <string name="go_comments">马上评价</string>
    <string name="buy_again">再次购买</string>
    <string name="cancle_tuikuan">取消退款</string>
    <string name="cancle_order">取消订单</string>
    <string name="apply_tuikuan">申请退款</string>
    <string name="delete">删除</string>
    <string name="order_invalid">订单失效</string>
    <string name="order_cancle_sucess">订单取消成功</string>
    <string name="order_get_sucess">收货成功</string>
    <string name="order_applay_sucess">申请退款提交成功</string>
    <string name="order_applay_cancle_sucess">取消申请退款提交成功</string>
    <string name="order_comments_sucess">评论提交成功</string>
    <string name="order_del_sucess">订单已删除</string>
    <string name="extend_time">对不起，已超出营业时间</string>
    <string name="pay_submit_order_fail">支付订单生成失败</string>
    <string name="pay_sucess">支付成功</string>
    <string name="pay_fail">支付失败</string>
    <string name="pay_suring">支付结果确认中</string>
    <string name="date_before_wrong">请选择正确的时间</string>
    <string name="date_not_in_busineess">抱歉,尚不支持本时时间段派送</string>
    <string name="loading_over">没有更多内容</string>
    <string name="data_emptye">数据不存在</string>
    <string name="try_later">请稍后重试</string>
    <string name="version_newest">已是最新版本</string>
    <string name="soft_update">软件更新</string>
    <string name="soft_update_content">检测到新版本,是否立即下载?</string>
    <string name="down_now">立即下载</string>
    <string name="call_now">呼叫</string>
    <string name="exit_app_tip">"再按一次退出程序"</string>

</resources>